# raweceek

./: .editorconfig  .gitignore  .golangci.yaml  .sops.yaml  Cargo.toml  Dockefile  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  logo.xcf  main.go  mise.toml  pom.xml
.github/workflows/: checks.yaml  release.yaml
backend/: Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  pom.xml
backend/.devcontainer/: devcontainer.json  docker-compose.yaml
backend/codegen/: pom.xml
backend/service/: pom.xml
backend/spec/: schema.sql  swagger-config.yaml  swagger.yaml
cmd/server/: config.go  database.go  main.go
frontend/: Dockerfile  Makefile  README.md  app.py  example.env  package-lock.json  package.json
frontend/.devcontainer/: devcontainer.json  docker-compose.yaml
frontend/public/: banners.txt  index.css  index.html  manifest.json
frontend/public/banners/: README.md
frontend/src/: index.tsx
frontend/src/api/: api.ts
frontend/src/components/: Banners.tsx  ChristmasGarland.tsx  Counter.tsx  (+4 more)
frontend/templates/: index.html
helm/: Chart.yaml  values.yaml
helm/templates/: cluster-issuer.yaml  deployment.yaml  ingress.yaml  service.yaml
internal/: config.go  database.go
internal/handlers/: handlers.go  routes.go
internal/session/: repository.go  service.go  service_test.go
public/: index.html
public/static/: main.css  main.js
public/templates/: index.html
spec/: contract.yaml  schema.sql
spec/codegen/: query.sql  sqlc.yaml
src/: countdown.rs  error.rs  handler.rs  main.rs  session.rs
utils/: ics.js
(+60 files in other folders)
