[package]
name = "raweceek"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "time"] }
time = { version = "0.3.49", features = ["serde", "formatting"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"]}
tower-http = { version = "0.7.0", features = ["fs"] }
